downgrade jquery version to resolve display issue on mobile browsers

--- a/data/css/jquery.mobile.custom.css
+++ b/data/css/jquery.mobile.custom.css
@@ -196,7 +196,7 @@
     color: White;
     font-size: 12px;
     width: 120px;
-    height: 27px;
+    height: 37px;
     text-align: center;
     line-height: 25px;
     font-family: "Ubuntu", sans-serif;
